2007-09-09  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-expand-url): Use "/" as path when it of base-uri is not
	defined; Clear query of base-uri when empty query exist; Changes to
	follow RFC3986.

2007-09-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-euc-japan-encoder, w3m-iso-latin-1-encoder): Use
	mule-version to decide whether to redefine them.

	* w3m.el: Use emacs-version instead of emacs-major-version to show the
	version of Emacs that emacs-w3m doesn't support.

2007-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-local-file-type): Regard news:* urls as text/html.
	(w3m-w3m-retrieve): Return nil if retrieving failed.
	(w3m-show-error-information): Improve error message for news:* urls.

2007-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_PATH_EMACS): Improve expression of Emacs version.

	* doc/ptexinfmt.el (ptexinfmt-broken-facility)
	(ptexinfmt-defun-if-broken, ptexinfmt-defun-if-void)
	(ptexinfmt-defvar-if-void): Don't use old-style backquotes.
	(texinfo-format-cedilla-accent): Quote `,'.

	* w3m-antenna.el (w3m-antenna-site-key, w3m-antenna-site-title)
	(w3m-antenna-site-class, w3m-antenna-site-url)
	(w3m-antenna-site-last-modified, w3m-antenna-site-size)
	(w3m-antenna-site-size-detected): Don't use old-style backquotes.

	* w3m-ccl.el (w3m-ccl-write-repeat, w3m-euc-japan-decoder)
	(w3m-euc-japan-encoder, w3m-iso-latin-1-decoder)
	(w3m-iso-latin-1-encoder): Don't use old-style backquotes.

	* w3m-dtree.el (w3m-dtree-has-child): Don't use old-style backquotes.

	* w3m-form.el (w3m-form-method, w3m-form-action, w3m-form-charlst)
	(w3m-form-enctype, w3m-form-plist, w3m-form-get-property, w3m-form-put)
	(w3m-form-get): Don't use old-style backquotes.

	* w3m-namazu.el (w3m-namazu-default-index-customize-spec): Don't use
	old-style backquotes.

	* w3m-util.el (w3m-static-if, w3m-static-when, w3m-static-unless)
	(w3m-condition-case, w3m-add-text-properties)