@@ -1,3 +1,7 @@
+2007-09-13  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (w3m-expand-path-name): Save the matched data surely.
+
 2007-09-09  Naohiro Aota  <nao.aota@gmail.com>
 
 	* w3m.el (w3m-expand-url): Use "/" as path when it of base-uri is not
